--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.12",
+    "@react-three/rapier": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.159.0"
